random changes to test files

--- a/meson.build
+++ b/meson.build
@@ -4,3 +4,7 @@ executable('menu_ex','menu_example.cpp')
 executable('menu_test','menu_tester.cpp')
 executable('sgl_test','sgl_test.cpp')
 static_gui_dep = declare_dependency(include_directories:include_directories('.'))
+custom_target('c_test', build_always:true, command:['clang++', '-O3','-o', meson.current_build_dir() + '/callable_test.S', '-S', meson.current_source_dir() + '/callable_test.cpp'], output:['callable_test.S'])
+executable('callable_test','callable_test.cpp',cpp_args:['-O3'])
+custom_target('menu_test', build_always:true, command:['clang++', '-O3','-std=c++17','-fno-rtti','-o', meson.current_build_dir() + '/menu_tester.S', '-S', meson.current_source_dir() + '/menu_tester.cpp'], output:['menu_tester.S'])
+
