--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -80,7 +80,10 @@
     "xlocmes": "cpp",
     "xstddef": "cpp",
     "xtr1common": "cpp",
-    "*.rh": "cpp"
+    "*.rh": "cpp",
+    "ryu_parse.h": "c",
+    "d2s_small_table.h": "c",
+    "d2s_full_table.h": "c"
   },
   "cSpell.words": [
     "cget",
@@ -100,5 +103,6 @@
         }
       }
     ]
-  }
+  },
+  "C_Cpp.errorSquiggles": "Disabled"
 }
