--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,13 +23,10 @@
     {
       "type": "meson",
       "mode": "build",
-      "group": {
-        "kind": "build",
-        "isDefault": true
-      },
+      "group": "build",
       "problemMatcher": [],
       "label": "Meson: Build all targets"
-    }
+    },
   ],
   "version": "2.0.0"
 }
