--- a/meson_options.txt
+++ b/meson_options.txt
@@ -4,3 +4,4 @@ option('optimize_size', type: 'boolean', value: false)
 option('char_type', type : 'combo', choices : ['char', 'char16_t', 'char32_t'], value : 'char')
 option('line_width', type:'integer', value: 0)
 option('instantiate', type:'boolean', value: false)
+option('test',type:'feature', value:'disabled')
