--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,3 +1,3 @@
 
-test_sources = ['main.cpp','callable.cpp']
+test_sources = ['main.cpp','callable.cpp','cx_arg.cpp']
 executable('test_main', sources:test_sources, dependencies:[catch_dep,static_gui_dep])
