--- a/tests/meson.build
+++ b/tests/meson.build
@@ -1,3 +1,4 @@
 
 test_sources = ['main.cpp','callable.cpp','cx_arg.cpp']
 executable('test_main', sources:test_sources, dependencies:[catch_dep,static_gui_dep])
+executable('named_tuple',sources:['named_tuple.cpp'])
