--- a/meson_options.txt
+++ b/meson_options.txt
@@ -5,3 +5,4 @@ option('char_type', type : 'combo', choices : ['char', 'char16_t', 'char32_t'], 
 option('line_width', type:'integer', value: 0)
 option('instantiate', type:'boolean', value: false)
 option('test',type:'feature', value:'disabled')
+option('gui', type: 'boolean', value: false)
