made constexpr version of ryu format in include/ryu. Added gcem to dependencies. Added fix_point class->changed static_assert in sgl::Numeric. Renamed the functions sgl::format to sgl::to_chars Renamed sgl::format_t to format.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 docs/**
 subprojects/Catch2-2.13.8/**
 subprojects/packagecache/**
-subprojects/ryu
+subprojects/ryu/**
+subprojects/gcem/**
 build**
 .vscode/**
