added ryu unit test for compile and runtime formatting.

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -10,7 +10,10 @@ test_sources = [
   'ryu/d2s_intrinsics_test.cpp',
   'ryu/d2s_table_test.cpp',
   'ryu/d2s_test.cpp',
-  'ryu/f2s_test.cpp'
+  'ryu/f2s_test.cpp',
+  'ryu/cx/f2s_test.cpp',
+  'ryu/cx/d2s_test.cpp',
+  'ryu/cx/d2fixed_test.cpp'
 ]
 
 executable('test_main', 
