added meson build option for qt version

--- a/include/sgl/qt/meson.build
+++ b/include/sgl/qt/meson.build
@@ -1,5 +1,7 @@
-qt = import('qt6')
-qt_dep = dependency('qt6', modules: ['Core', 'Gui', 'Widgets'])
+
+qt_name = 'qt@0@'.format(get_option('qt_major_version'))
+qt_mod = import(qt_name)
+qt_dep = dependency(qt_name, modules: ['Core', 'Gui', 'Widgets'])
 
 moc_headers = files(
   'display_item.hpp',
@@ -11,9 +13,9 @@ moc_headers = files(
 )
 
 gui_src = [
-  qt.compile_resources(name:'section_rc', 
+  qt_mod.compile_resources(name:'section_rc', 
                        sources: 'resources/section.qrc'),
-  qt.compile_moc( headers: moc_headers, 
+  qt_mod.compile_moc( headers: moc_headers, 
                   include_directories:[include_directories('.'), sgl_include_dir]),
   'display_item.cpp',
   'display_page.cpp',
