--- a/meson_options.txt
+++ b/meson_options.txt
@@ -6,4 +6,5 @@ option('line_width', type:'integer', value: 0)
 option('instantiate', type:'boolean', value: false)
 option('test',type:'feature', value:'disabled', description: 'build tests')
 option('example',type:'feature', value:'disabled', description: 'build examples')
-option('gui', type: 'boolean', value: false, description: 'build qt based menu tester')
+option('gui', type: 'boolean', value: false, description: 'build qt based menu visualizer')
+option('qt_major_version', type: 'integer', value: 6, description: 'major version of qt to use to build the visalizer')
