--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,13 +14,15 @@ jobs:
   build-job:
     runs-on: ${{ fromJSON('["ubuntu-latest", "self-hosted"]')[github.repository == 'github/docs-internal'] }}
     steps:
-      - name: building
-      - uses: actions/setup-python@v4
-      - uses: actions/checkout@v3
-      - run: pip install meson
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: installing python
+        uses: actions/setup-python@v4
+      - name: installing meson
+        run: pip install meson
       - name: setup build dir
-      - run: meson setup build -Dgui=true -Dtest=enabled
+        run: meson setup build -Dgui=true -Dtest=enabled
       - name: building
-      - run: meson compile -C build
+        run: meson compile -C build
       - name: running test executable
-      - run: ./build/tests/test_main
+        run: ./build/tests/test_main
