--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,10 @@ jobs:
         uses: actions/setup-python@v4
       - name: installing meson
         run: pip install meson
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v3
+        with:
+          version: '6.2.4'
       - name: setup build dir
         run: meson setup build -Dgui=true -Dtest=enabled
       - name: building
