--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-python@v4
       - name: installing meson
         run: pip install meson
+      - name: installign ninja
+        run: pip install ninja
       - name: Install Qt
         uses: jurplel/install-qt-action@v3
         with:
