--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: test
 on:
   push:
     branches:
-      - main
+      - master
 
 # This allows a subsequently queued workflow run to interrupt previous runs
 concurrency:
