added more tests

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -16,9 +16,11 @@ test_sources = [
   'fixed_point.cpp',
   'input.cpp',
   'item_concept.cpp',
+  'limits.cpp',
   'name.cpp',
   'named_tuple.cpp',
   'named_value.cpp',
+  'pair.cpp',
   'static_string.cpp',
   'string_view.cpp',
   'type_list.cpp',
