--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
       - name: installing meson
-        run: pip install meson
+        run: pip install 'meson>=0.60.0,=<0.63.0'
       - name: installing ninja
         run: pip install ninja
       - name: setup build directory
