--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
       - name: installing meson
-        run: pip install meson==0.60.0
+        run: pip3 install meson==0.60.0
       - name: installing ninja
-        run: pip install ninja
+        run: pip3 install ninja
       - name: setup build directory
         run: meson setup build -Dtest=enabled -Dbuildtype=${{ matrix.buildtype }} -Dwarning_level=3
       - name: building
