--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+      - name: installing ninja
+        run: pip3 install ninja=1.10.2
       - name: installing meson
         run: pip3 install meson==0.60.0
       - name: ninja location
