--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
       - name: installing ninja
-        run: pip3 install ninja=1.10.2
+        run: pip3 install ninja==1.10.2
       - name: installing meson
         run: pip3 install meson==0.60.0
       - name: ninja location
