added more docs. fixed small errors in menu and page.

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -18,6 +18,7 @@ test_sources = [
   'input.cpp',
   'item_concept.cpp',
   'limits.cpp',
+  'menu.cpp',
   'name.cpp',
   'named_tuple.cpp',
   'named_value.cpp',
