more docs. improved build files and removed meson options.

--- a/example/meson.build
+++ b/example/meson.build
@@ -1,6 +1,6 @@
-readme_exe = executable('example_readme','example_readme.cpp', include_directories: sgl_include_dir, dependencies: gcem_dep)
-menu2_exe = executable('menu2','menu2.cpp', include_directories: sgl_include_dir, dependencies: gcem_dep)
-menu_teser = executable('menu_tester','menu_tester.cpp', include_directories: sgl_include_dir, dependencies: gcem_dep)
+executable('example_readme','example_readme.cpp', dependencies: core_dep)
+executable('menu2','menu2.cpp', dependencies: core_dep)
+executable('menu_tester','menu_tester.cpp', dependencies: core_dep)
 
 if get_option('gui')
   executable('gui_example', 
