--- a/include/sgl/qt/meson.build
+++ b/include/sgl/qt/meson.build
@@ -1,7 +1,15 @@
-
 qt_name = 'qt@0@'.format(get_option('qt_major_version'))
 qt_mod = import(qt_name)
 dependencies += dependency(qt_name, modules: ['Core', 'Gui', 'Widgets'])
+
+cxx = meson.get_compiler('cpp').get_id()
+
+if cxx == 'clang'
+  defines += '-Wno-language-extension-token'
+  if host_machine.system() == 'windows'
+    defines += '-Wno-microsoft-enum-value'
+  endif
+endif
 
 moc_headers = files(
   'display_item.hpp',
@@ -12,11 +20,12 @@ moc_headers = files(
   'section.hpp',
 )
 
-gui_src = [
-  qt_mod.compile_resources(name:'section_rc', 
-                       sources: 'resources/section.qrc'),
+visualizer_src = [
+  qt_mod.compile_resources( name:'section_rc', 
+                            sources: 'resources/section.qrc'),
   qt_mod.compile_moc( headers: moc_headers, 
-                  include_directories:[include_directories('.'), sgl_include_dir]),
+                      dependencies: core_dep,
+                      extra_args: '-DSGL_BUILD_LIB'),
   'display_item.cpp',
   'display_page.cpp',
   'display.cpp',
@@ -27,8 +36,8 @@ gui_src = [
 ]
 
 dependencies += declare_dependency(
-  sources: gui_src, 
-  compile_args: '-DSGL_BUILD_LIB',
+  sources: visualizer_src, 
+  compile_args: ['-DSGL_BUILD_LIB', defines],
   include_directories: sgl_include_dir,
-  dependencies: [dependencies]
+  dependencies: core_dep
 )
