--- a/meson.build
+++ b/meson.build
@@ -2,24 +2,16 @@ project('static gui library',['cpp'], default_options:[ 'cpp_std=c++17',
                                                         'warning_level=3'])
 
 sgl_include_dir = include_directories('include')
+
 gcem_dep = dependency('gcem', fallback:['gcem','gcem_dep'])
-dependencies = [gcem_dep]
 
 defines = []
-cxx = meson.get_compiler('cpp').get_id()
-if cxx == 'clang'
-  defines += '-Wno-language-extension-token'
-  if host_machine.system() == 'windows'
-    defines += '-Wno-microsoft-enum-value'
-  endif
-endif
+
 
 
 if get_option('optimize_size')
   defines += '-DRYU_OPTIMIZE_SIZE'
 endif
-
-defines += '-DSGL_USE_CHARCONV=1'
 
 if get_option('instantiate')
     if get_option('line_width') == 0
@@ -29,8 +21,17 @@ if get_option('instantiate')
     defines += ['-DSGL_CHAR_TYPE=@0@'.format(get_option('char_type')), '-DSGL_LINE_WIDTH=@0@'.format(get_option('line_width'))]
 endif
 
-if get_option('gui')
+core_dep = declare_dependency(include_directories: sgl_include_dir, 
+                              dependencies: gcem_dep,
+                              compile_args: defines)
+
+dependencies = [core_dep]
+
+if get_option('gui')  
   subdir('include/sgl/qt')
+  install_subdir('include', install_dir: 'include')
+else
+  install_subdir('include', install_dir: 'include', exclude_directories: 'qt')
 endif
 
 sgl_dep = declare_dependency( include_directories: sgl_include_dir, 
@@ -43,4 +44,5 @@ endif
 
 if get_option('example').enabled()
   subdir('example')
+  install_subdir('example', install_dir: 'example')
 endif
